# python-pkginfo-rs

./: Cargo.toml  Changelog.md  LICENSE  README.md
.github/workflows/: CI.yml
src/: distribution.rs  error.rs  lib.rs  metadata.rs
tests/: test_distribution.rs
tests/fixtures/: build-0.4.0-py2.py3-none-any.whl  build-0.4.0-py3.9.egg  build-0.4.0.tar  build-0.4.0.tar.bz2  build-0.4.0.tar.lz  build-0.4.0.tar.xz
