[package]
name = "python-pkginfo"
version = "0.6.0"
authors = ["messense <messense@icloud.com>"]
edition = "2021"
description = "Parse Python package metadata from sdist and bdists and etc."
keywords = ["python", "pkginfo", "metadata"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PyO3/python-pkginfo-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = { version = "0.4.4", optional = true }
flate2 = "1.0.20"
fs-err = "2.6.0"
mailparse = "0.14"
rfc2047-decoder = "0.2.0"
serde = { version = "1.0.126", features = ["derive"], optional = true }
tar = "0.4.35"
thiserror = "1.0.30"
xz = { version = "0.1.0", optional = true }
zip = { version = "0.6.0", default-features = false, features = ["bzip2", "deflate", "time"] }

[dev-dependencies]
serde_json = "1.0.99"

[features]
deprecated-formats = ["bzip2", "xz"]
