[package]
name = "python-pkginfo"
version = "0.6.3"
authors = ["messense <messense@icloud.com>"]
edition = "2021"
description = "Parse Python package metadata from sdist and bdists and etc."
keywords = ["python", "pkginfo", "metadata"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PyO3/python-pkginfo-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = { version = "0.4.4", optional = true }
flate2 = "1.0.33"
fs-err = "2.11.0"
mailparse = "0.15"
rfc2047-decoder = "1.0.5"
serde = { version = "1.0.210", features = ["derive"], optional = true }
tar = "0.4.41"
thiserror = "1.0.63"
xz = { version = "0.1.0", optional = true }
zip = { version = ">=0.6,<2", default-features = false, features = ["deflate"] }

[dev-dependencies]
serde_json = "1.0.128"

[features]
deprecated-formats = ["bzip2", "xz", "zip/bzip2"]
