[package]
name = "python-pkginfo"
version = "0.6.6"
authors = ["messense <messense@icloud.com>"]
edition = "2021"
description = "Parse Python package metadata from sdist and bdists and etc."
keywords = ["python", "pkginfo", "metadata"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/PyO3/python-pkginfo-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = { version = "0.5.2", optional = true }
flate2 = "1.0.33"
fs-err = "3.0.0"
mailparse = "0.16"
rfc2047-decoder = "1.0.6"
serde = { version = "1.0.210", features = ["derive"], optional = true }
tar = "0.4.41"
thiserror = "2.0.3"
xz = { package = "xz2", version = "0.1.7", optional = true }
zip = { version = ">=0.6,<7", default-features = false, features = ["deflate"] }

[dev-dependencies]
serde_json = "1.0.128"

[features]
deprecated-formats = ["bzip2", "xz", "zip/bzip2"]
